--- a/lab_3/src/CMakeLists.txt
+++ b/lab_3/src/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
 project(lab_3)
 set(CMAKE_C_FLAGS "-pthread")
-add_executable(main1 ./src/main.c)
+add_executable(lab ./src/main.c)
